# net-assembly-loader-rs

./: Cargo.toml
src/: main.rs
