[package]
name = "net-assembly-loader"
version = "0.1.0"
authors = ["Jaxii"]
edition = "2021"

[[bin]]
name = "loader-rs"
path = "src/main.rs"

[dependencies]
winapi = {version = "0.3.9", features=["memoryapi", "libloaderapi", "processthreadsapi"]}
win32-error = "0.9.0"
obfstr = "0.4.1"
reqwest = {version = "0.11.11", features = ["blocking"]}
base64 = "0.20.0-alpha.1"

[profile.release]
lto = "on"
codegen-units = 1
panic = "abort"
strip = true
opt-level = "z"